<resources>
    <string name="app_name">EcoStep</string>
    <string name="btn_signup">Registrarse</string>
    <string name="btn_login">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="code">Codigo</string>
    <string name="content_description_start_icon">ddd</string>
    <string name="email">Email</string>
    <string name="title_action_signup">¡Crea una Cuenta! 👋</string>
    <string name="title_action_login">¡Bienvenido, Inicia Sesión! 👋</string>
    <string name="insert_confirm_code">Ingresa el código de confirmación enviado al email</string>">
    <string name="title_ecostep">ECOSTEP</string>
    <string name="name">Nombre(s)</string>
    <string name="nick">Alias</string>
    <string name="start_date"> 1 de enero de 2023</string>
    <string name="fist_step">¡Ecosalvador desde</string>
    <string name="last_name">Apellido(s)</string>
    <string name="gender">Género</string>
    <string name="date_of_birth">Fecha de Nacimiento</string>
    <string name="phone">Telefono</string>
    <string name="country">Pais</string>
    <string name="province">Provincia</string>
    <string name="comunity_province">Comunidad Ecospet</string>
    <string name="google_text">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_account">¿Ya tienes cuenta? Ingresar</string>
    <string name="not_yet_account">¿Aún no tienes cuenta? Registrarse</string>
    <string name="not_send_code">¿No has recibido el codigo? Reenviar</string>
    <string name="separator">o</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding_description">Recuerda, que pequeñas acciones, hacen  grandes cambios.\n<b>¡Únete al movimiento eco!</b></string>
    <string name="on_boarding_language">" 🇪🇦 Español (ES) <u>Editar</u>"</string>
    <string name="on_boarding_title">¡Cuida el planeta gana recompensas!</string>
    <string name="nextStep">Continuar</string>
</resources>