<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <include
        android:id="@+id/activity_profile_resume"
        layout="@layout/activity_profile_resume" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_assignment_ind_24"
        app:layout_constraintTop_toBottomOf="@+id/activity_profile_resume">
        <!--  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_assignment_ind_24"
        app:layout_constraintTop_toBottomOf="@+id/ilNick">
      <!--  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilName"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_assignment_ind_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilLastName"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_attach_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilEmail"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_assignment_ind_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilDate_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilGender"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_assignment_ind_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDate_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilDate_of_birth"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_add_call_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilPhone"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_fmd_good_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/province"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilCountry"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_fmd_good_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilComunity_Province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comunity_province"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilProvince"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/baseline_fmd_good_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etComunity_Province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/main_text_color" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
